# kmam-iot-llm-middleware

./: .env.sample  .gitignore  CLAUDE.md  pyproject.toml
data/scenarios/: control_scenarios.json  injection_samples.json
docs/: outline.md  report.docx  report.md
fonts/: README.md
results/: llm_comparison.json  llm_comparison_A.json  llm_comparison_B.json  metrics.json  rule_tier_errors.json  summary.md
scripts/: build_report.sh  check_models.py  fetch_public_dataset.py  generate_scenarios.py  md_to_docx.py  run_evaluation.py  run_llm_evaluation.py
src/kmam/: __init__.py  context.py  middleware.py
src/kmam/access_control/: __init__.py  engine.py  policy.py
src/kmam/agent/: __init__.py  langchain_integration.py
src/kmam/audit/: __init__.py  logger.py
src/kmam/authentication/: __init__.py  authenticator.py
src/kmam/config/: devices.yaml  identities.yaml  policies.yaml
src/kmam/detection/: __init__.py  detector.py  llm_classifier.py  rules.py
src/kmam/devices/: __init__.py  models.py  simulator.py
src/kmam/evaluation/: __init__.py  public_dataset.py  runner.py  scenarios.py
src/kmam/validation/: __init__.py  command_validator.py
tests/: test_access_control.py  test_audit.py  test_authenticator.py  test_command_validator.py  test_detection.py  test_devices.py  test_evaluation.py  test_middleware.py  test_smoke.py
