[project]
name = "kmam-llm-middleware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-deepseek>=1.1.0",
    "langchain-ollama>=1.1.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kmam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
